--- a/style.css
+++ b/style.css
@@ -3,9 +3,6 @@ body{
     padding: 0;
     font-family: 'Nunito Sans', sans-serif;
 }
-.small-nav,#small-menu{
-    display: none;
-}
 ::-webkit-scrollbar{
     width: 5px;
 }
@@ -24,6 +21,9 @@ nav{
     height: 120px;
     align-items: center;
     color: #fffdfd;
+}
+.small-nav,#small-menu{
+    display: none;
 }
 .fixed{
     position: fixed;
@@ -183,7 +183,7 @@ nav div{
 .img-box img{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
 }
 .prod-img .img-box:last-child img{
