--- a/product.css
+++ b/product.css
@@ -194,25 +194,7 @@ nav div{
         align-items: center;
         position: fixed;
         width: 100%;
-        box-shadow: 0px 1px 1px 0px whitesmoke;
-
       }
-      .prod-img .img-box {
-        width: 100%;
-        /* height: 300px; */
-        /* margin: 75px 38px 0px 0px; */
-        margin-top: 100px;
-    }
-.prod-div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* padding: 30px; */
-    width: 80%;
-    padding: 10%;
-    text-align: center;
-    margin-top: 100px;
-}
       .small-nav img{
         filter: invert(1);
         width: 100%;
@@ -291,12 +273,117 @@ nav div{
         flex-direction: column;
         justify-content: space-around;
       }
-      .footer{
+      #banner {
+        top: 0px;
+        height: 50vh;
+      }
+      .card-div{
+        flex-direction: column;
+        align-items: unset;
+        align-items: center;
+      }
+      .card{
+            width: 65%;
+          margin: 30px;
+      }
+      .prod-div{
+        padding: 0;
+        margin-top: 25%;
+    }
+    .prod-head h3{
+        padding: 10px;
+    }
+    .prod-img{
+        justify-content: center;
+    }
+      .prod-img .img-box {
+        width: 90%;
+        margin: 0;
+        margin-top: 75px;
+    }
+    .about-div{
+        flex-direction: column;
+        padding: 0;
+    }
+    .about-img{
+        height: 500px;
+        width: 100%;
+        justify-content: center;
+    }
+    .color {
+        width: 75%;
+        height: 50%;
+    }
+    .about-txt{
+        width: 90%;
+        padding-left: 20px;
+        padding-bottom: 35px ;
+    }
+    .about-txt h1{
+        font-size: 35px;
+    }
+    .about-txt p{
+        padding: 0;
+        font-size: 16px;
+    }
+    .about-btn{
+        width: 70%;
+    }
+    .about-btn button{
+        height: 45px;
+        width: 120px;
+    }
+    .feedback{
+        padding: 30px;
+        height: 180vh;
+    }
+    #slider {
+        width: 100%;
+        height: 0%;
+        overflow: visible;
+        position: relative;
+        top: 0%;
+        left: 0%;
+    }
+    .slide {
+        flex-direction: column;
+        width: 100%;
+        height: 85%;
+        animation: slide .2s linear;
+        justify-content: unset;
+        animation: none;
+    }
+    .slide p {
+        font-size: 20px;
+    }
+    .arrow{
+        width: 30%;
+        top: 90%;
+        left: 35%;
+    }
+    .arrow i{
+        width: 50px;
+        height: 50px;
+    }
+    .counts{
+        flex-direction: column;
+    }
+    .ask-div{
+        flex-direction: column;
+        padding: 0;
+    }
+    .ask-head,.ask-email{
+        width: 80%;
+    }
+    .ask-head h1{
+        font-size: 30px;
+    }
+    .footer{
         flex-direction: column;
         padding: 0;
         padding-left: 15px;
         padding-top: 30px;
-        margin-top: 30px;
+        margin-top: 20%;
     }
     .footer div{
         padding-bottom: 20px;
@@ -326,6 +413,146 @@ nav div{
         position: fixed;
         top: 7%;
         left: 44%;
+        background: linear-gradient(
+    90deg
+    ,#7b1fa2, #4762ff);
+        padding: 1%;
+    }
+}
+@media (min-width: 480px) and (max-width: 991px){
+    
+    nav{
+        display: none;
+    }
+    .small-nav{
+      background: black;
+      filter: invert(1);
+      color: #fdfdfd;
+      display: flex;
+      height: 130px;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0px 25px;
+      width: 91%;
+    position: fixed;
+    }
+    .small-nav img{
+        filter: invert(1);
+        width: 100%;
+      }
+    .small-logo {
+        width: 15%;
+    }
+    .icon i{
+      font-size: 35px;
+    }
+    .close{
+      position: absolute;
+      left: -30%;
+      top: 0%;
+      font-size: 35px;
+      width: 30%;
+      height: 17%;
+      display: flex !important;
+      align-items: center;
+      justify-content: center;
+    }
+    .close-in{
+      position: absolute;
+      top: 90px;
+      right: 30px;
+      font-size: 28px;
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex !important;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid gray;
+      color: white;
+    }
+    #small-menu{
+      width: 75%;
+      height: 100vh;
+      position: fixed;
+      top: 0;
+      z-index: 9;
+      background: linear-gradient(270deg,#7b1fa2, #4762ff);
+      right: 0;
+      display: flex;
+      align-items: center;
+      display: none;
+    }
+    #small-menu ul{
+        padding: 0;
+        margin-left: 30px;
+        list-style: none;
+        font-size: 22px;
+        color: white;
+        height: 35%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+      }
+      .card{
+        width: 50%;
+        padding-bottom: 50px;
+    }
+    .prod-div{
+        padding: 50px
+    }
+    .prod-head h3{
+        margin-bottom: 50px;
+    }
+    .prod-img{
+        justify-content: space-between;
+    }
+    .prod-img .img-box {
+        width: 45%;
+        margin: 0;
+        padding-bottom: 75px;
+    }
+    .sticky {
+        position: relative;
+        bottom: 0px;
+        z-index: -1;
+    }
+    .ask-div{
+        flex-direction: column;
+        padding: 30px;
+    }
+    .ask-head {
+        width: 60%;
+    }
+    .ask-email {
+        width: 40%;
+    }
+    .about-div{
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-img{
+        height: 330px;
+        width: 70%;
+    }
+    .about-img, .about-txt {
+        width: 100%;
+    }
+    .about-btn{
+        width: 50%;
+    }
+    .slide{
+        width: 385px;
+    }
+    #slider {
+        width: 80%;
+        left: 15%;
+        top: 0px;
+    }
+    .brochure button {
+        position: fixed;
+        top: 6%;
+        left: 41%;
         background: linear-gradient(
     90deg
     ,#7b1fa2, #4762ff);
