--- a/waterway.css
+++ b/waterway.css
@@ -15,7 +15,7 @@ body{
 }
 
 nav{
-    background: transparent;
+    background: #1a1b1f;
     display: flex;
     justify-content: space-between;
     height: 120px;
@@ -33,6 +33,7 @@ nav{
     box-shadow: 0px 1px 8px 0px #948d8d;
     animation: transform .2s linear;
     z-index: 9;
+    top: 0;
 }
 @keyframes transform {
     from{
@@ -86,20 +87,91 @@ nav div{
 .menu-list ul li:hover,.social-icons i:hover{
     color: white;
 }
+.heading{
+    height: 200vh;
+}
 #banner{
     position: relative;
-    top: -120px;
+    /* top: -120px; */
     z-index: -1;
-    height: 100vh;
+    /* height: 45vh; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #1a1b1f;
+    padding-bottom: 2%;
 }
-#banner img{
+#banner h1{
+    font-size: 50px;
+    color: #fff;
+}
+#banner span{
+    font-size: 28px;
+    margin-bottom: 30px;
+    color: #808080;
+}
+/* #banner img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
     position: absolute;
     animation: opacity 1s linear;
+} */
+.brochure{
+    width: 100%;
+    /* display: flex; */
+    /* justify-content: flex-start; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 30px;
 }
+.brochure button{
+    /* position: fixed; */
+    /* top: 6%; */
+    /* left: 17%; */
+    background: linear-gradient(90deg,#7b1fa2, #4762ff);
+    padding: 1%;
+    color: #fff;
+    padding-right: 3em;
+    padding-left: 3em;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.overview{
+    display: flex;
+    width: 100%;
+    background: #fff;
+}
+.overview-left{
+    width: 40%;
+    padding: 5%;
+    display: flex;
+    align-items: center;
+}
+.overview-left img{
+    width: 100%;
+}
+.overview-right{
+    width: 40%;
+    padding: 5%;
+}
+.overview-right ul{
+    font-size: 16px;
+    line-height: 1.9em;
+    color: #828282;
+    list-style: none;
+    margin-left: -37px;
+}
+.overview-right ul i{
+    color: #7b1fa2;
+    margin-right: 20px;
+    font-size: 20px;
+    font-weight: 100;
+}
+
 @keyframes opacity{
     0%{
         opacity: 0.5;
@@ -158,7 +230,7 @@ nav div{
     flex-direction: column;
     align-items: center;
     padding: 100px;
-    text-align: center;
+    background: #fff;
 }
 .prod-head h1{
     font-size: 40px;
@@ -176,15 +248,221 @@ nav div{
     flex-wrap: wrap;
 }
 .prod-img .img-box{
-    width: 30%;
-    height: 300px;
-    margin: 75px 38px 0px 0px;
+    width: 24%;
+    margin: 75px 36px 0px 0px;
+    border: 1px solid #f5ebeb;
+    padding: 3%;
+}
+.prod-img .img-box:hover{
+    box-shadow: 0 25px 70px rgb(0 0 0 / 7%);
 }
 .img-box img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+.img-box i{
+    font-size: 50px;
+    color: #5b5bf5;
+}
+.img-box p{
+    color: #828282;
+}
+.highlight{
+    width: 100%;
+    padding-bottom: 10%;
+    background: #fff;
+    margin-top: -1.5%;
+}
+.highlight-top{
+    width: 100%;
+    text-align: center;
+}
+.highlight-bottom{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+.highlight-left{
+    width: 27%;
+}
+.highlight-left p{
+    font-size: 16px;
+    line-height: 1.9em;
+    color: #828282;
+}
+.highlight-right{
+    width: 47%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.border{
+    border-radius: 50em;
+    height: 30px;
+    position: relative;
+    width: 100%;
+    background-color: #eef0f3;
+    margin-bottom: 30px;
+}
+.border-1{
+    width: 85%;
+    color: #fff;
+    background: linear-gradient(to right, var(--color-gradient-stop) 0%, var(--color-gradient-start) 100%);
+    display: inline-block;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: inherit;
+    background-color: #4762ff;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(
+90deg
+,#7b1fa2, #4762ff);
+}
+.border-1 h3{
+    margin-top: 4px;
+    margin-left: 8px;
+    font-size: 1em;
+    font-weight: 100;
+}
+.border-1 span{
+    margin-right: 8px;
+    margin-top: 4px;
+}
+.border-2{
+    width: 80%;
+    color: #fff;
+    background: linear-gradient(to right, var(--color-gradient-stop) 0%, var(--color-gradient-start) 100%);
+    display: inline-block;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: inherit;
+    background-color: #4762ff;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(
+90deg
+,#7b1fa2, #4762ff);
+}
+.border-2 h3{
+    margin-top: 4px;
+    margin-left: 8px;
+    font-size: 1em;
+    font-weight: 100;
+}
+.border-2 span{
+    margin-right: 8px;
+    margin-top: 4px;
+}
+.border-3{
+    width: 90%;
+    color: #fff;
+    background: linear-gradient(to right, var(--color-gradient-stop) 0%, var(--color-gradient-start) 100%);
+    display: inline-block;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: inherit;
+    background-color: #4762ff;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(
+90deg
+,#7b1fa2, #4762ff);
+}
+.border-3 h3{
+    margin-top: 4px;
+    margin-left: 8px;
+    font-size: 1em;
+    font-weight: 100;
+}
+.border-3 span{
+    margin-right: 8px;
+    margin-top: 4px;
+}
+.border-4{
+    width: 95%;
+    color: #fff;
+    background: linear-gradient(to right, var(--color-gradient-stop) 0%, var(--color-gradient-start) 100%);
+    display: inline-block;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: inherit;
+    background-color: #4762ff;
+    display: flex;
+    justify-content: space-between;
+    background: linear-gradient(
+90deg
+,#7b1fa2, #4762ff);
+}
+.border-4 h3{
+    margin-top: 4px;
+    margin-left: 8px;
+    font-size: 1em;
+    font-weight: 100;
+}
+.border-4 span{
+    margin-right: 8px;
+    margin-top: 4px;
+}
+.picture{
+    width: 100%;
+    display: flex;
+    padding-bottom: 10%;
+    background: #fff;
+}
+.pic{
+    width: 25%;
+    position: relative;
+}
+.pic:hover img{
+    opacity: 0.2;
+}
+.pic:hover .absolute{
+    z-index: 1;
+}
+
+.pic img{
+    width: 100%;
+}
+.absolute{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: black;
+    z-index: -1;
+}
+.add{
+    text-align: center;
+    background: #fff;
+    margin-top: -37px;
+    padding-bottom: 10%;
+}
+.add h2{
+    font-size: 44px;
+    line-height: 1.4;
+    letter-spacing: 0;
+}
+.add p{
+    font-size: 18px;
+    padding-right: 30%;
+    padding-left: 30%;
+    color: #828282;
 }
 .prod-img .img-box:last-child img{
     object-position: bottom;
@@ -404,6 +682,11 @@ nav div{
     bottom: 0px;
     z-index: -1;
 }
+#footer{
+    position: sticky;
+    bottom: 0;
+    z-index: -2;
+}
 .footer{
     display: flex;
     justify-content: space-between;
@@ -537,7 +820,7 @@ nav div{
       }
       #banner {
         top: 0px;
-        height: 50vh;
+        height: 44vh;
       }
       .card-div{
         flex-direction: column;
@@ -668,6 +951,72 @@ nav div{
         position: relative;
         bottom: 0px;
         z-index: -1;
+    }
+    .overview {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        background: #fff;
+    }
+    .overview-left {
+        width: 90%;
+        padding: 5%;
+        display: flex;
+        align-items: center;
+    }
+    .overview-right {
+        width: 90%;
+        padding: 5%;
+    }
+    .highlight {
+        width: 100%;
+        padding-bottom: 10%;
+        background: #fff;
+        margin-top: -5.5%;
+    }
+    .highlight-bottom {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        /* justify-content: space-around; */
+    }
+    .highlight-left {
+        width: 90%;
+        padding: 5%;
+    }
+    .highlight-top {
+        width: 100%;
+        text-align: center;
+        padding-top: 10%;
+    }
+    .highlight-right {
+        width: 90%;
+        padding: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .picture {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 10%;
+        background: #fff;
+    }
+    .pic {
+        width: 100%;
+        position: relative;
+    }
+    .add p {
+        font-size: 18px;
+        padding-right: 5%;
+        padding-left: 5%;
+        color: #828282;
+    }
+    .add h2 {
+        font-size: 30px;
+        line-height: 1.4;
+        letter-spacing: 0;
     }
 }
 
