--- a/about.css
+++ b/about.css
@@ -53,8 +53,8 @@ nav div{
     margin-left: -50px;
 }
 .logo img{
-    width: 42%;
-    height: 80%;
+    width: 50%;
+    object-fit: contain;
     cursor: pointer;
     filter: invert(0);
 }
@@ -120,6 +120,14 @@ nav div{
     position: sticky;
     bottom: 0;
     z-index: -2;
+}
+.footer-btm button{
+    width: 250px;
+    height: 45px;
+    border: none;
+    background: linear-gradient(270deg,#7b1fa2, #4762ff);
+    color: white;
+    font-size: 17px;
 }
 .footer{
     display: flex;
@@ -233,8 +241,18 @@ nav div{
         justify-content: space-between;
         align-items: center;
       }
+      .footer-btm {
+        text-align: center;
+        background: #2d323d;
+        color: #98a2aa;
+        border-top: 1px solid;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
       .small-nav img{
-        filter: invert(1);
+        filter: invert(0);
         width: 100%;
       }
       .small-logo{
@@ -314,7 +332,25 @@ nav div{
       #banner {
         top: 0px;
         height: 44vh;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
       }
+      #banner h1 {
+        font-size: 38px;
+        color: #fff;
+        margin: 0;
+    }
+    .aboutus p {
+        font-size: 16px;
+        line-height: 1.9em;
+        color: #828282;
+        margin-left: 7%;
+        margin-right: 7%;
+        text-align: center;
+    }
       .card-div{
         flex-direction: column;
         align-items: unset;
@@ -408,6 +444,7 @@ nav div{
     .ask-div{
         flex-direction: column;
         padding: 0;
+        margin-top: -15px;
     }
     .ask-head,.ask-email{
         width: 80%;
@@ -530,9 +567,34 @@ nav div{
       width: 94%;
     }
     .small-nav img{
-        filter: invert(1);
+        filter: invert(0);
         width: 100%;
       }
+      #banner {
+        position: relative;
+        z-index: 0;
+        height: 40vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background: #1a1b1f;
+        padding-bottom: 3%;
+    }
+    .ask-head h1 {
+        font-size: 2.5em;
+        line-height: 1.5;
+        font-weight: 100;
+        color: #ffafa2;
+    }
+    .aboutus p {
+        font-size: 16px;
+        line-height: 1.9em;
+        color: #828282;
+        margin-left: 9%;
+        margin-right: 9%;
+        text-align: center;
+    }
     .small-logo {
         width: 15%;
     }
