--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
     scroll-behavior: smooth;
 }
 a{
-    color: #fff;
+    color: #989898;
     text-decoration: none;
 }
 ::-webkit-scrollbar{
@@ -57,8 +57,8 @@ nav div{
     margin-left: -50px;
 }
 .logo img{
-    width: 42%;
-    height: 80%;
+    width: 50%;
+    object-fit: contain;
     cursor: pointer;
     filter: invert(0);
 }
@@ -446,8 +446,17 @@ nav div{
     background: #2d323d;
     color: #98a2aa;
     border-top: 1px solid;
+    display: flex;
+    justify-content: space-around;
 }
-
+.footer-btm button{
+    width: 250px;
+    height: 45px;
+    border: none;
+    background: linear-gradient(270deg,#7b1fa2, #4762ff);
+    color: white;
+    font-size: 17px;
+}
 @media (max-width:480px){
     ::-webkit-scrollbar {
         width: 0px;
@@ -465,7 +474,7 @@ nav div{
         align-items: center;
       }
       .small-nav img{
-        filter: invert(1);
+        filter: invert(0);
         width: 100%;
       }
       .small-logo{
@@ -489,6 +498,16 @@ nav div{
         align-items: center;
         justify-content: center;
       }
+      .footer-btm {
+        text-align: center;
+        background: #2d323d;
+        color: #98a2aa;
+        border-top: 1px solid;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-around;
+    }
       .close-in{
         position: absolute;
         top: 90px;
@@ -695,11 +714,31 @@ nav div{
       width: 94%;
     }
     .small-nav img{
-        filter: invert(1);
+        filter: invert(0);
         width: 100%;
       }
     .small-logo {
         width: 15%;
+    }
+    #banner {
+        position: relative;
+        top: -20px;
+        z-index: -1;
+        height: 38vh;
+    }
+    .ask-head h1 {
+        font-size: 2.5em;
+        line-height: 1.5;
+        font-weight: 100;
+        color: #ffafa2;
+    }
+    .feedback {
+        padding: 50px;
+        background: url(images/bg.jpg);
+        color: white;
+        background-size: cover;
+        position: relative;
+        height: 900px;
     }
     .icon i{
       font-size: 35px;
@@ -803,8 +842,31 @@ nav div{
         width: 385px;
     }
     #slider {
-        width: 80%;
-        left: 15%;
+        width: 100%;
+        left: 0%;
         top: 0px;
+    }
+    .slide {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 85%;
+        position: absolute;
+        top: 5%;
+        width: 100%;
+        animation: slide .2s linear;
+    }
+    .arrow {
+        position: absolute;
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
+        top: 90%;
+    }
+    .footer {
+        display: flex;
+        justify-content: space-between;
+        padding: 75px 25px;
+        background-color: #2D323D;
     }
 }
